Add content to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.webp" alt="Lasagna">
+    <h2>Description</h2>
+    <p>This is a delicious lasagna</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>ground beef</li>
+        <li>tomato sauce</li>
+        <li>cheese</li>
+        <li>lasagna noodles</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil the lasagna noodles</li>
+        <li>Sear the ground beef</li>
+        <li>Cook ground beef with the tomato sauce</li>
+        <li>Combine and bake in the oven</li>
+    </ol>
 </body>
 </html>
