--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="../images/pizza.webp" alt="Pizza">
+    <h2>Description</h2>
+    <p>This is an Italian-style pizza.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>water</li>
+        <li>flour</li>
+        <li>yeast</li>
+        <li>tomato sauce</li>
+        <li>cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Comine flour yeast and water.</li>
+        <li>Roll out dough.</li>
+        <li>Add tomato sauce and cheese on top.</li>
+        <li>Bake in the oven.</li>
+    </ol>
 </body>
 </html>
