Fix punctuation in lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <h1>Lasagna</h1>
     <img src="../images/lasagna.webp" alt="Lasagna">
     <h2>Description</h2>
-    <p>This is a delicious lasagna</p>
+    <p>This is a delicious lasagna.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>ground beef</li>
@@ -20,10 +20,10 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Boil the lasagna noodles</li>
-        <li>Sear the ground beef</li>
-        <li>Cook ground beef with the tomato sauce</li>
-        <li>Combine and bake in the oven</li>
+        <li>Boil the lasagna noodles.</li>
+        <li>Sear the ground beef.</li>
+        <li>Cook ground beef with the tomato sauce.</li>
+        <li>Combine and bake in the oven.</li>
     </ol>
 </body>
 </html>
