Add content to fishandchips.html

--- a/recipes/fishandchips.html
+++ b/recipes/fishandchips.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Fish and Chips</h1>
+    <img src="../images/fishandchips.webp" alt="Fish and Chips">
+    <h2>Description</h2>
+    <p>This is home-made Fish and Chips.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>patatoes</li>
+        <li>fish</li>
+        <li>flour</li>
+        <li>egg</li>
+        <li>milk</li>
+        <li>baking powder</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine flour, egg, baking powder and milk.</li>
+        <li>Dip fish into mixture.</li>
+        <li>Cut patatoes into chips.</li>
+        <li>Bake fish and chips in the oven.</li>
+    </ol>
 </body>
 </html>
