--- a/recipes/fishandchips.html
+++ b/recipes/fishandchips.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,34 @@
     <title>Fish and Chips</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
-    <h1>Fish and Chips</h1>
-    <img src="../images/fishandchips.webp" alt="Fish and Chips">
+    <div class="dishintro">
+        <h1>Fish and Chips</h1>
+        <img class="dishimage" src="../images/fishandchips.webp" alt="Fish and Chips">
+    </div>
     <h2>Description</h2>
     <p>This is home-made Fish and Chips.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>patatoes</li>
-        <li>fish</li>
-        <li>flour</li>
-        <li>egg</li>
-        <li>milk</li>
-        <li>baking powder</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Combine flour, egg, baking powder and milk.</li>
-        <li>Dip fish into mixture.</li>
-        <li>Cut patatoes into chips.</li>
-        <li>Bake fish and chips in the oven.</li>
-    </ol>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>patatoes</li>
+            <li>fish</li>
+            <li>flour</li>
+            <li>egg</li>
+            <li>milk</li>
+            <li>baking powder</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h2>Steps</h2>
+        <ol>
+            <li>Combine flour, egg, baking powder and milk.</li>
+            <li>Dip fish into mixture.</li>
+            <li>Cut patatoes into chips.</li>
+            <li>Bake fish and chips in the oven.</li>
+        </ol>
+    </div>
 </body>
+
 </html>
