Add styling to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,32 @@
     <title>Lasagna</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
-    <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp" alt="Lasagna">
+    <div class="dishintro">
+        <h1>Lasagna</h1>
+        <img class="dishimage" src="../images/lasagna.webp" alt="Lasagna">
+    </div>
     <h2>Description</h2>
     <p>This is a delicious lasagna.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>ground beef</li>
-        <li>tomato sauce</li>
-        <li>cheese</li>
-        <li>lasagna noodles</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Boil the lasagna noodles.</li>
-        <li>Sear the ground beef.</li>
-        <li>Cook ground beef with the tomato sauce.</li>
-        <li>Combine and bake in the oven.</li>
-    </ol>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>ground beef</li>
+            <li>tomato sauce</li>
+            <li>cheese</li>
+            <li>lasagna noodles</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil the lasagna noodles.</li>
+            <li>Sear the ground beef.</li>
+            <li>Cook ground beef with the tomato sauce.</li>
+            <li>Combine and bake in the oven.</li>
+        </ol>
+    </div>
 </body>
+
 </html>
