Add styling to pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,33 @@
     <title>Pizza</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
-    <h1>Pizza</h1>
-    <img src="../images/pizza.webp" alt="Pizza">
+    <div class="dishintro">
+        <h1>Pizza</h1>
+        <img class="dishimage" src="../images/pizza.webp" alt="Pizza">
+    </div>
     <h2>Description</h2>
     <p>This is an Italian-style pizza.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>water</li>
-        <li>flour</li>
-        <li>yeast</li>
-        <li>tomato sauce</li>
-        <li>cheese</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Comine flour yeast and water.</li>
-        <li>Roll out dough.</li>
-        <li>Add tomato sauce and cheese on top.</li>
-        <li>Bake in the oven.</li>
-    </ol>
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>water</li>
+            <li>flour</li>
+            <li>yeast</li>
+            <li>tomato sauce</li>
+            <li>cheese</li>
+        </ul>
+    </div>
+    <div class="steps">
+        <h2>Steps</h2>
+        <ol>
+            <li>Comine flour yeast and water.</li>
+            <li>Roll out dough.</li>
+            <li>Add tomato sauce and cheese on top.</li>
+            <li>Bake in the oven.</li>
+        </ol>
+    </div>
 </body>
+
 </html>
